# ocoen-docsender

./: .gitignore  buildspec.yml  constraints.txt  setup.cfg  setup.py  tox.ini
ocoen/: docsender.py
scripts/: install-dependencies.py  package.py
src/ocoen/: docsender.py  docsenderlambda.py
tests/: conftest.py  test_docsender.py  test_docsender_create_mime_message.py  test_docsender_format_email.py  test_docsenderlambda.py
