[metadata]
name=ocoen_docsender
version=0.1.0
description=Labda to email a file from S3 in response to SNS.
long_description=file: README.rst
license=Apache
url=https://github.com/orthanc/ocoen_docsender
author=Ed Costello
author_email=ocoen@orthanc.co.nz

[options]
packages=find:
package_dir=
    =src
include_package_data=True
zip_safe=True
install_requires=
    boto3
    pyyaml

[options.packages.find]
where=src
